Alteração de scripts para acessar dicas, estilização botão landing page cta.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
         <section class="hero">
             <div class="hero-titulo">
                 <h1>Sua proteção diária contra o clima extremo começa aqui.</h1>
-                <p>Receba a previsão do tempo da sua cidade, saiba o que fazer em caso de emergência e encontre locais seguros.</p>
-                <p>O Manual do Tempo ajuda você a se preparar para hoje — e para o pior, se ele vier. Acesse, oriente-se e compartilhe. Informação pode salvar vidas.</p>
+                <p>Receba a previsão do tempo da sua cidade, saiba o que fazer em caso de emergência e encontre locais
+                    seguros.</p>
+                <p>O Manual do Tempo ajuda você a se preparar para hoje — e para o pior, se ele vier. Acesse, oriente-se
+                    e compartilhe. Informação pode salvar vidas.</p>
+                <a href="./pages/home.html" class="cta botao">Começar agora</a>
             </div>
-            <!-- <a href="./pages/home.html" class="cta">Começar agora</a> -->
             <div class="hero-banner">
                 <img src="./assets/images/prevencao_site.svg" alt="imagem de uma mulher se previnindo com o site">
             </div>
