--- a/pages/abrigos.html
+++ b/pages/abrigos.html
@@ -36,31 +36,15 @@
         </section>
         <section class="abrigos-container">
             <ul class="abrigos">
-                <li class="abrigo">
-                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
-                    <p class="endereco">Endereço</p>
-                    <p class="telefone">(11) 91234-5678</p>
-                    <ul class="avaliacao">
-                        <li class="estrela"></li>
-                        <li class="estrela"></li>
-                        <li class="estrela"></li>
-                        <li class="estrela"></li>
-                        <li class="estrela"></li>
-                    </ul>
-                    <p>Recursos disponíveis: <span class="recursos"></span></p>
-                    <a href="#" class="botao">Conferir Rotas</a>
-                </li>
             </ul>
-            <p class="sem-abrigos">Não há abrigos encontrados para sua localização. O que acha que procurar para outra
-                localização ao redor? Não esqueça de acessar as dicas de como se preparar sobre um evento climático.</p>
+            <p class="sem-abrigos">Não há abrigos encontrados para sua localização. O que acha que procurar para outra localização ao redor? Não esqueça de acessar as dicas de como se preparar sobre um evento climático.</p>
         </section>
     </main>
 
     <footer>
         <div class="limite-container">
             <section>
-                <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png"
-                        alt="logo da manual do tempo"></a>
+                <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png" alt="logo da manual do tempo"></a>
                 <p>© 2025 Manual do Tempo. Todos os direitos reservados</p>
             </section>
             <nav>
