--- a/pages/home.html
+++ b/pages/home.html
@@ -171,7 +171,8 @@
 
         <section class="modo-panico">
             <h2>Modo Pânico</h2>
-            <p>Envie sua localização para um contato de emergência. Digite o número de alguém de confiança que será avisado visualmente.</p>
+            <p>Envie sua localização para um contato de emergência. Digite o número de alguém de confiança que será
+                avisado visualmente.</p>
             <form id="modoPanico">
                 <i class="fa-solid fa-phone"></i>
                 <input type="search" name="modo-panico" id="modo-panico" placeholder="Número do contato">
@@ -200,6 +201,12 @@
             <section>
                 <h3>Durante</h3>
                 <ul class="durante">
+                    <li>conteúdo</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Depois</h3>
+                <ul class="depois">
                     <li>conteúdo</li>
                 </ul>
             </section>
