Add: emojis para clareza na leitura, conteudo na desc queSomos e estilizacao do botao na landingPage

--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -67,7 +67,7 @@
         </section>
         <section class="integrantes">
             <h2>Conheça nosso time</h2>
-            <p>Breve descrição ou algo do tipo. 1TDSPF</p>
+            <p>Pensado para proteger os mais vulneráveis com empatia e tecnologia.</p>
             <ul>
                 <li>
                     <img src="../assets/images/integrante1.jpeg" alt="imagem do integrante Felipe Ferrete Soares Lemes">
