Finalização da mostragem de conteúdos

--- a/pages/home.html
+++ b/pages/home.html
@@ -144,25 +144,25 @@
             <ul class="lista-dicas">
                 <li>
                     <a>
-                        <p>Ondas de calor</p>
+                        <p>Onda de Calor</p>
                         <img src="../assets/images/onda-de-calor.png" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
                     <a>
-                        <p>Frio extremo</p>
+                        <p>Frio Intenso</p>
                         <img src="../assets/images/frio_extremo.svg" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
                     <a>
-                        <p>Chuvas intensas</p>
+                        <p>Chuvas Intensas</p>
                         <img src="../assets/images/chuvas_intensas.svg" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
                     <a>
-                        <p>Ventos fortes</p>
+                        <p>Ventos Fortes</p>
                         <img src="../assets/images/ventos_fortes.svg" alt="imagem de onda de calor">
                     </a>
                 </li>
@@ -194,27 +194,19 @@
             <h2>Evento Climático</h2>
             <section>
                 <h3>Antes</h3>
-                <ul class="antes">
-                    <li>conteúdo</li>
-                </ul>
+                <ul class="antes"></ul>
             </section>
             <section>
                 <h3>Durante</h3>
-                <ul class="durante">
-                    <li>conteúdo</li>
-                </ul>
+                <ul class="durante"></ul>
             </section>
             <section>
                 <h3>Depois</h3>
-                <ul class="depois">
-                    <li>conteúdo</li>
-                </ul>
+                <ul class="depois"></ul>
             </section>
             <section>
-                <h3>Depois</h3>
-                <ul class="depois">
-                    <li>conteúdo</li>
-                </ul>
+                <h3>Como prever</h3>
+                <ul class="prever"></ul>
             </section>
         </dialog>
     </main>
